--- a/k8s/app/supabase/templates/ingress.yaml
+++ b/k8s/app/supabase/templates/ingress.yaml
@@ -1,43 +1,54 @@
-{{- if .Values.ingress.enabled -}}
+{{- /* Kong Ingress */ -}}
+{{- if and .Values.kong.enabled .Values.ingress.kong.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "supabase.fullname" . }}
+  name: supabase-kong
   labels:
     {{- include "supabase.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.ingress.kong.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.className }}
-  ingressClassName: {{ . }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
+  ingressClassName: {{ .Values.global.ingressClassName }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .Values.ingress.kong.host | quote }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- with .pathType }}
-            pathType: {{ . }}
-            {{- end }}
+          - path: /
+            pathType: Prefix
             backend:
               service:
-                name: {{ include "supabase.fullname" $ }}
+                name: supabase-kong
                 port:
-                  number: {{ $.Values.service.port }}
-          {{- end }}
-    {{- end }}
+                  number: {{ .Values.kong.service.ports.http }}
+---
+{{- end }}
+
+{{- /* Studio Ingress */ -}}
+{{- if .Values.ingress.studio.enabled }}
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: supabase-studio
+  labels:
+    {{- include "supabase.labels" . | nindent 4 }}
+  {{- with .Values.ingress.studio.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  ingressClassName: {{ .Values.global.ingressClassName }}
+  rules:
+    - host: {{ .Values.ingress.studio.host | quote }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: supabase-studio
+                port:
+                  number: 3000
 {{- end }}
