fix: postgres mount

--- a/k8s/app/supabase/templates/deployment.yaml
+++ b/k8s/app/supabase/templates/deployment.yaml
@@ -30,12 +30,47 @@ spec:
           env:
 {{ include "supabase.renderEnv" .Values.postgres.env | indent 12 }}
           volumeMounts:
+            # Realtime migrations
+            - name: pg-sql-realtime
+              mountPath: /docker-entrypoint-initdb.d/migrations/99-realtime.sql
+{{/*              subPath: 99-realtime.sql*/}}
+              readOnly: true
+            # Must be superuser to create event trigger
+            - name: pg-sql-webhooks
+              mountPath: /docker-entrypoint-initdb.d/init-scripts/98-webhooks.sql
+{{/*              subPath: 98-webhooks.sql*/}}
+              readOnly: true
+            # Must be superuser to alter reserved role
+            - name: pg-sql-roles
+              mountPath: /docker-entrypoint-initdb.d/init-scripts/99-roles.sql
+              subPath: 99-roles.sql
+              readOnly: true
+            # Initialize the database settings with JWT_SECRET and JWT_EXP
+            - name: pg-sql-jwt
+              mountPath: /docker-entrypoint-initdb.d/init-scripts/99-jwt.sql
+{{/*              subPath: 99-jwt.sql*/}}
+              readOnly: true
+            # PGDATA directory is persisted between restarts
             - name: pg-data
               mountPath: /var/lib/postgresql/data
+            # Changes required for internal supabase data such as _analytics
+            - name: pg-sql-supabase
+              mountPath: /docker-entrypoint-initdb.d/migrations/97-_supabase.sql
+{{/*              subPath: 97-_supabase.sql*/}}
+              readOnly: true
+            # Changes required for Analytics support
+            - name: pg-sql-logs
+              mountPath: /docker-entrypoint-initdb.d/migrations/99-logs.sql
+{{/*              subPath: 99-logs.sql*/}}
+              readOnly: true
+            # Changes required for Pooler support
+            - name: pg-sql-pooler
+              mountPath: /docker-entrypoint-initdb.d/migrations/99-pooler.sql
+              subPath: 99-pooler.sql
+              readOnly: true
+            # Use named volume to persist pgsodium decryption key between restarts
             - name: pg-config
               mountPath: /etc/postgresql-custom
-            - name: pg-init
-              mountPath: /docker-entrypoint-initdb.d
           {{- with .Values.postgres.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -276,10 +311,34 @@ spec:
           hostPath:
             path: {{ .Values.postgres.hostPath.config }}
             type: DirectoryOrCreate
-        - name: pg-init
+        - name: pg-sql-supabase
           hostPath:
-            path: {{ .Values.postgres.hostPath.init }}
-            type: DirectoryOrCreate
+            path: {{ .Values.postgres.hostPath.supabaseSql }}
+            type: File
+        - name: pg-sql-jwt
+          hostPath:
+            path: {{ .Values.postgres.hostPath.jwtSql }}
+            type: File
+        - name: pg-sql-webhooks
+          hostPath:
+            path: {{ .Values.postgres.hostPath.webhooksSql }}
+            type: File
+        - name: pg-sql-roles
+          hostPath:
+            path: {{ .Values.postgres.hostPath.rolesSql }}
+            type: File
+        - name: pg-sql-logs
+          hostPath:
+            path: {{ .Values.postgres.hostPath.logsSql }}
+            type: File
+        - name: pg-sql-pooler
+          hostPath:
+            path: {{ .Values.postgres.hostPath.poolerSql }}
+            type: File
+        - name: pg-sql-realtime
+          hostPath:
+            path: {{ .Values.postgres.hostPath.realtimeSql }}
+            type: File
         {{- end }}
         {{- if .Values.supavisor.enabled }}
         - name: pooler-config
